# nothing

./: .gitignore  .pre-commit-config.yaml  readme.md
.github/util/: collect.py
.github/workflows/: build.yml  releases.yml
Application/: .clang-format  CMakeLists.txt
Application/src/: CMakeLists.txt  main.cpp
Application/src/app/: CMakeLists.txt
Application/src/app/startpoint/: main.cpp
Application/src/cmake_functions/: cmake_functions.cmake
Application/src/lib/consts/: CMakeLists.txt
Application/src/lib/consts/src/: Consts.cpp  Consts.h
Application/src/lib/nothing_version/: CMakeLists.txt
Application/src/lib/nothing_version/src/: NothingVersion.cpp  NothingVersion.h  version_config.in
Application/src/lib/version/: CMakeLists.txt
Application/src/lib/version/src/: Version.cpp  Version.h  version_config.in
Application/src/qml/: main.qml  res.qrc
Application/src/start_point/: CMakeLists.txt  main.cpp
Application/src/start_point/qml/: Editor.qml  main.qml  res.qrc
